# repo-name-generator

./: .coveragerc  README.md  pyproject.toml
docs/: Määrittelydokumentti.md
reports/: Viikkoraportti-1.md  Viikkoraportti-2.md
src/: generator_builder.py  main.py  trie_builder.py
src/data_handler/: data_handler.py
src/trie/: trie.py
src/utils/: trie_debug.py
tests/: conftest.py  test_trie_performance.py  test_trie_realistic.py  test_trie_simple.py
