[tool.poetry]
name = "repo-name-generator"
version = "0.1.0"
description = "Repository and project name generator based on probabilistic models"
authors = ["Stefan <stefan.bonney@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.4.1"


[tool.poetry.group.dev.dependencies]
coverage = "^7.10.6"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-vv -ra --cov=src --cov-branch --cov-report=term-missing:skip-covered"
markers = ["perf: performance or memory tests"]

